--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
 
 <div class="slider-parent">
 	<div class="slider">   
-	        <div><img src="img/bar2.jpg"></div>
-	        <div><img src="img/nihonsyu2.jpg"></div>   
-	        <div><img src="img/beer5.jpg"></div>
+	        <div><img src="img/bar2.jpg" alt="お酒"></div>
+	        <div><img src="img/nihonsyu2.jpg" alt="日本酒"></div>   
+	        <div><img src="img/beer5.jpg" alt="ビール"></div>
 	</div>
 </div>
+
+<h1 class="pconly">お酒の販売店 お酒販売株式会社 - すてきなお酒との出会いが次々に。</h1>
+<h1 class="sponly">お酒の販売店 お酒販売株式会社<br>すてきなお酒との出会いが次々に。</h1>
 
 <h2 class="choose">
   お酒を選ぶ
@@ -104,25 +107,25 @@
 
 <div id="top3">
   <a href="product.html" id="top3-1" class="touka1">
-    <img src="img/beer2.jpg">
-    <figcaption class="no1">
+    <img src="img/beer2.jpg" alt="サッポロビール">
+    <div class="no1">
       No.1
       <h4 class="top3h4title">サッポロビール</h4>
-    </figcaption>
+    </div>
   </a>
   <a href="product.html" id="top3-2" class="touka1">
-    <img src="img/nihonsyu.jpg">
-    <figcaption class="no2">
+    <img src="img/nihonsyu.jpg" alt="大吟醸">
+    <div class="no2">
       No.2
       <h4 class="top3h4title2">大吟醸</h4>
-    </figcaption>
+    </div>
   </a>
   <a href="product.html" id="top3-3" class="touka1">
-    <img src="img/vodka.jpg">
-    <figcaption class="no3">
+    <img src="img/vodka.jpg" alt="ウォッカ">
+    <div class="no3">
       No.3
       <h4 class="top3h4title2">ウォッカ</h4>
-    </figcaption>
+    </div>
   </a>
 </div>
 
@@ -138,19 +141,19 @@
 
 <div id="newsyouhin">
   <div class="new-parent">
-  <div class="new"><a href="product.html"><img src="img/rum.jpg" class="imgtitle"><p class="hoverMask">キューバ原産のおいしいラム酒です。
+  <div class="new"><a href="product.html"><img src="img/rum.jpg" class="imgtitle" alt="ゴールドラム"><p class="hoverMask">キューバ原産のおいしいラム酒です。
   </p></a></div>
   <h4><a href="product.html" class="touka">ゴールドラム</a></h4><p class="mb0">内容量:750ml<br>原産地:キューバ</p>
   </div>
 
   <div class="new-parent mt30-2">
-  <div class="new"><a href="product.html"><img src="img/tequila.jpg" class="imgtitle"><p class="hoverMask">メキシコ原産のおいしいテキーラです。
+  <div class="new"><a href="product.html"><img src="img/tequila.jpg" class="imgtitle" alt="テキーラ ゴールド"><p class="hoverMask">メキシコ原産のおいしいテキーラです。
   </p></a></div>
   <h4><a href="product.html" class="touka">テキーラ ゴールド</a></h4><p class="mb0">内容量:750ml<br>原産地:メキシコ</p>
   </div>
 
   <div class="new-parent mt30">
-  <div class="new"><a href="product.html"><img src="img/gin.jpg" class="imgtitle"><p class="hoverMask">イギリス原産のおいしいジンです。
+  <div class="new"><a href="product.html"><img src="img/gin.jpg" class="imgtitle" alt="ドライ・ジン"><p class="hoverMask">イギリス原産のおいしいジンです。
   </p></a></div>
   <h4><a href="product.html" class="touka">ドライ・ジン</a></h4><p class="mb0">内容量:750ml<br>原産地:イギリス</p>
   </div>
@@ -168,20 +171,20 @@
 
 <ul class="news-list">
   <li class="news-list-child">
-          <p class="date">2022/1/15</p>
+          <time class="date">2022/1/15</time>
           <p class="osirase-mark"><span>お知らせ</span></p>
           <a href="#"><p class="osirase">
             新成人1000名にお酒を無料プレゼント「お酒販売株式会社の成人式」を開催！</p>
           </a>
   </li>
   <li class="news-list-child">
-          <p class="date">2021/12/20</p>
+          <time class="date">2021/12/20</time>
           <p class="osirase-mark"><span>お知らせ</span></p>
           <a href="#"><p class="osirase">料金表示を税込価格に変更しました。</p>
           </a>
   </li>
   <li class="news-list-child">
-          <p class="date">2021/12/1</p>
+          <time class="date">2021/12/1</time>
           <p class="osirase-mark"><span>お知らせ</span></p>
           <a href="#"><p class="osirase">使用可能なクレジットカードについて。</p>
           </a>
@@ -199,16 +202,16 @@
 </h2>
 
 <div class="container tokusyu-parent">
-    <div class="row">
-        <div class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/edamame.jpg" class="tokusyu imgtitle touka1"></a></div>
-        <div><span class="toukoubi">2021/12/3</span><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">おつまみに最適!「枝豆特集」</a></h4></div></div>
-        <div class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/olive.jpg" class="tokusyu imgtitle touka1"></a></div>
-        <div><span class="toukoubi">2021/12/3</span><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">つくりおきおつまみ「オリーブのオイル漬け」</a></h4></div></div>
-        <div class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/nihonsyu3.jpg" class="tokusyu imgtitle touka1"></a></div>
-        <div><span class="toukoubi">2021/12/3</span><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">入手困難な幻の日本酒特集!</a></h4></div></div>
-        <div class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/bar.jpg" class="tokusyu imgtitle touka1"></a></div>
-        <div><span class="toukoubi">2021/12/3</span><h4 class="mb0 lineh"><a href="#" class="touka tokusyu-title">おすすめの隠れ家的なバーをご紹介!</a></h4></div></div>
-    </div>
+    <ul class="row">
+        <li class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/edamame.jpg" class="tokusyu imgtitle touka1" alt="枝豆"></a></div>
+        <div><time class="toukoubi">2021/12/3</time><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">おつまみに最適!「枝豆特集」</a></h4></div></li>
+        <li class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/olive.jpg" class="tokusyu imgtitle touka1" alt="おつまみ"></a></div>
+        <div><time class="toukoubi">2021/12/3</time><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">つくりおきおつまみ「オリーブのオイル漬け」</a></h4></div></li>
+        <li class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/nihonsyu3.jpg" class="tokusyu imgtitle touka1" alt="日本酒"></a></div>
+        <div><time class="toukoubi">2021/12/3</time><h4 class="mb0 lineh"><a href="#" class="touka mb0 tokusyu-title">入手困難な幻の日本酒特集!</a></h4></div></li>
+        <li class="col-lg-3 col-12 tf"><div class="img-area"><a href="#"><img src="img/bar.jpg" class="tokusyu imgtitle touka1" alt="バー"></a></div>
+        <div><time class="toukoubi">2021/12/3</time><h4 class="mb0 lineh"><a href="#" class="touka tokusyu-title">おすすめの隠れ家的なバーをご紹介!</a></h4></div></li>
+    </ul>
 </div>
 
 <div class="btn0">
@@ -220,7 +223,7 @@
 <footer>
   <div class="container">
   <div class="row">
-  <div class="col-lg-2 col-6"><div class="footer-title">CATEGORY</div>
+  <div class="col-lg-2 col-6"><h3 class="footer-title">CATEGORY</h3>
   <ul class="footer-cat">
     <li>
       <a href="product.html" class="touka">
@@ -253,7 +256,7 @@
       </a>
     </li>
   </ul></div>
-  <div class="col-lg-4 col-6"><div class="footer-title">ABOUT</div>
+  <div class="col-lg-4 col-6"><h3 class="footer-title">ABOUT</h3>
   <ul class="footer-cat">
     <li>
       <a href="#" class="touka">
@@ -291,10 +294,10 @@
       </a>
     </li>
   </ul></div>
-  <div class="col-lg-6 col-12"><div class="footer-syoukai"><div class="footer-title">お酒販売株式会社</div>
+  <div class="col-lg-6 col-12"><div class="footer-syoukai"><h3 class="footer-title">お酒販売株式会社</h3>
   <div>色々なお酒を売っています。<br>新商品も随時入荷し、お客様のご要望に応えられるよう努めています。<br>ぜひ当店にお買い求めください。</div></div>
   <div class="stop-flex">
-  <div class="stop"><img src="img/stop.png"></div>
+  <div class="stop"><img src="img/stop.png" alt=""></div>
   <div>お酒は20歳になってから。<br>お酒はおいしく適量を。<br>飲酒運転は絶対に止めましょう。<br>
   妊娠中や授乳期の飲酒は、胎児・乳児の発達に影響する恐れがありますので気をつけましょう。</div></div></div></div></div>
   <div class="copyright">© お酒販売株式会社</div>
