--- a/product.html
+++ b/product.html
@@ -119,7 +119,7 @@
 <div id="beer-cate" class="product-grid">
   <div class="products">
   <a href="#" class="touka1">
-    <img src="img/beer3.jpg" class="product-img">
+    <img src="img/beer3.jpg" class="product-img" alt="サッポロビール">
   </a>
     <h4 class="product-mb">
       <a href="#" class="touka">
@@ -132,7 +132,7 @@
   </div>
   <div class="products">
     <a href="#" class="touka1">
-      <img src="img/beer3.jpg" class="product-img">
+      <img src="img/beer3.jpg" class="product-img" alt="キリンビール">
     </a>
       <h4 class="product-mb">
         <a href="#" class="touka">
@@ -145,7 +145,7 @@
     </div>
     <div class="products">
       <a href="#" class="touka1">
-        <img src="img/beer3.jpg" class="product-img">
+        <img src="img/beer3.jpg" class="product-img" alt="アサヒビール">
       </a>
         <h4 class="product-mb">
           <a href="#" class="touka">
@@ -158,7 +158,7 @@
       </div>
       <div class="products">
         <a href="#" class="touka1">
-          <img src="img/beer3.jpg" class="product-img">
+          <img src="img/beer3.jpg" class="product-img" alt="サントリービール">
         </a>
           <h4 class="product-mb">
             <a href="#" class="touka" >
@@ -171,7 +171,7 @@
         </div>
         <div class="products">
           <a href="#" class="touka1">
-            <img src="img/beer3.jpg" class="product-img">
+            <img src="img/beer3.jpg" class="product-img" alt="コロナビール">
           </a>
             <h4 class="product-mb">
               <a href="#" class="touka">
@@ -193,7 +193,7 @@
         <div id="nihonsyu-cate" class="product-grid">
         <div class="products">
           <a href="#" class="touka1">
-            <img src="img/nihonsyu.jpg" class="product-img">
+            <img src="img/nihonsyu.jpg" class="product-img" alt="大吟醸">
           </a>
             <h4 class="product-mb">
               <a href="#" class="touka">
@@ -206,7 +206,7 @@
           </div>
           <div class="products">
             <a href="#" class="touka1">
-              <img src="img/nihonsyu.jpg" class="product-img">
+              <img src="img/nihonsyu.jpg" class="product-img" alt="純米酒">
             </a>
               <h4 class="product-mb">
                 <a href="#" class="touka">
@@ -219,7 +219,7 @@
             </div>
             <div class="products">
               <a href="#" class="touka1">
-                <img src="img/nihonsyu.jpg" class="product-img">
+                <img src="img/nihonsyu.jpg" class="product-img" alt="本醸造酒">
               </a>
                 <h4 class="product-mb">
                   <a href="#" class="touka">
@@ -232,7 +232,7 @@
               </div>
               <div class="products">
                 <a href="#" class="touka1">
-                  <img src="img/nihonsyu.jpg" class="product-img">
+                  <img src="img/nihonsyu.jpg" class="product-img" alt="特別純米酒">
                 </a>
                   <h4 class="product-mb">
                     <a href="#" class="touka">
@@ -245,7 +245,7 @@
                 </div>
                 <div class="products">
                   <a href="#" class="touka1">
-                    <img src="img/nihonsyu.jpg" class="product-img">
+                    <img src="img/nihonsyu.jpg" class="product-img" alt="純米大吟醸">
                   </a>
                     <h4 class="product-mb">
                       <a href="#" class="touka">
@@ -258,7 +258,7 @@
                   </div>
                   <div class="products">
                     <a href="#" class="touka1">
-                      <img src="img/nihonsyu.jpg" class="product-img">
+                      <img src="img/nihonsyu.jpg" class="product-img" alt="純米吟醸酒">
                     </a>
                       <h4 class="product-mb">
                         <a href="#" class="touka">
@@ -280,7 +280,7 @@
 <div id="umesyu-cate" class="product-grid">
 <div class="products">
   <a href="#" class="touka1">
-    <img src="img/umesyu.jpg" class="product-img">
+    <img src="img/umesyu.jpg" class="product-img" alt="チョーヤ梅酒">
   </a>
     <h4 class="product-mb">
       <a href="#" class="touka">
@@ -293,7 +293,7 @@
   </div>
   <div class="products">
     <a href="#" class="touka1">
-      <img src="img/umesyu.jpg" class="product-img">
+      <img src="img/umesyu.jpg" class="product-img" alt="高清水 梅酒">
     </a>
       <h4 class="product-mb">
         <a href="#" class="touka">
@@ -315,7 +315,7 @@
 <div id="wine-cate" class="product-grid">
 <div class="products">
   <a href="#" class="touka1">
-    <img src="img/red.jpg" class="product-img">
+    <img src="img/red.jpg" class="product-img" alt="赤ワイン">
   </a>
     <h4 class="product-mb">
       <a href="#" class="touka">
@@ -328,7 +328,7 @@
   </div>
   <div class="products">
     <a href="#" class="touka1">
-      <img src="img/white.jpg" class="product-img">
+      <img src="img/white.jpg" class="product-img" alt="白ワイン">
     </a>
       <h4 class="product-mb">
         <a href="#" class="touka">
@@ -341,7 +341,7 @@
     </div>
     <div class="products">
       <a href="#" class="touka1">
-        <img src="img/rose.jpg" class="product-img">
+        <img src="img/rose.jpg" class="product-img" alt="ロゼワイン">
       </a>
         <h4 class="product-mb">
           <a href="#" class="touka">
@@ -363,7 +363,7 @@
 <div id="syoutyu-cate" class="product-grid">
 <div class="products">
   <a href="#" class="touka1">
-    <img src="img/syoutyu.jpg" class="product-img">
+    <img src="img/syoutyu.jpg" class="product-img" alt="芋焼酎">
   </a>
     <h4 class="product-mb">
       <a href="#" class="touka">
@@ -376,7 +376,7 @@
   </div>
   <div class="products">
     <a href="#" class="touka1">
-      <img src="img/syoutyu.jpg" class="product-img">
+      <img src="img/syoutyu.jpg" class="product-img" alt="米焼酎">
     </a>
       <h4 class="product-mb">
         <a href="#" class="touka">
@@ -389,7 +389,7 @@
     </div>
     <div class="products">
       <a href="#" class="touka1">
-        <img src="img/syoutyu.jpg" class="product-img">
+        <img src="img/syoutyu.jpg" class="product-img" alt="麦焼酎">
       </a>
         <h4 class="product-mb">
           <a href="#" class="touka">
@@ -411,7 +411,7 @@
 <div id="yousyu-cate" class="product-grid">
 <div class="products">
   <a href="#" class="touka1">
-    <img src="img/vodka.jpg" class="product-img">
+    <img src="img/vodka.jpg" class="product-img" alt="ウォッカ">
   </a>
     <h4 class="product-mb">
       <a href="#" class="touka">
@@ -424,7 +424,7 @@
   </div>
   <div class="products">
     <a href="#" class="touka1">
-      <img src="img/tequila.jpg" class="product-img">
+      <img src="img/tequila.jpg" class="product-img" alt="テキーラ">
     </a>
       <h4 class="product-mb">
         <a href="#" class="touka">
@@ -437,7 +437,7 @@
     </div>
     <div class="products">
       <a href="#" class="touka1">
-        <img src="img/rum.jpg" class="product-img">
+        <img src="img/rum.jpg" class="product-img" alt="ラム">
       </a>
         <h4 class="product-mb">
           <a href="#" class="touka">
@@ -450,7 +450,7 @@
       </div>
       <div class="products">
         <a href="#" class="touka1">
-          <img src="img/gin.jpg" class="product-img">
+          <img src="img/gin.jpg" class="product-img" alt="ジン">
         </a>
           <h4 class="product-mb">
             <a href="#" class="touka">
@@ -468,7 +468,7 @@
 <footer>
   <div class="container">
   <div class="row">
-  <div class="col-lg-2 col-6"><div class="footer-title">CATEGORY</div>
+  <div class="col-lg-2 col-6"><h3 class="footer-title">CATEGORY</h3>
    <ul class="footer-cat">
      <li>
        <a href="product.html" class="touka">
@@ -501,7 +501,7 @@
       </a>
     </li>
    </ul></div>
-   <div class="col-lg-4 col-6"><div class="footer-title">ABOUT</div>
+   <div class="col-lg-4 col-6"><h3 class="footer-title">ABOUT</h3>
    <ul class="footer-cat">
     <li>
        <a href="#" class="touka">
@@ -539,10 +539,10 @@
       </a>
     </li>
   </ul></div>
-  <div class="col-lg-6 col-12"><div class="footer-syoukai"><div class="footer-title">お酒販売株式会社</div>
+  <div class="col-lg-6 col-12"><div class="footer-syoukai"><h3 class="footer-title">お酒販売株式会社</h3>
   <div>色々なお酒を売っています。<br>新商品も随時入荷し、お客様のご要望に応えられるよう努めています。<br>ぜひ当店にお買い求めください。</div></div>
    <div class="stop-flex">
-   <div class="stop"><img src="img/stop.png"></div>
+   <div class="stop"><img src="img/stop.png" alt=""></div>
   <div>お酒は20歳になってから。<br>お酒はおいしく適量を。<br>飲酒運転は絶対に止めましょう。<br>
        妊娠中や授乳期の飲酒は、胎児・乳児の発達に影響する恐れがありますので気をつけましょう。</div>
       </div></div></div></div>
